change on images

--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -34,19 +34,12 @@
             <object id="banda-svg" data="/assets/banda.svg" type="image/svg+xml"></object>
         </div>
         <div class="box">
-            <img src="/assets/logo.png" alt="logo" height="400px" width="400px">
-            <p>Popwatch is an online database of information related to Batman films and streaming content online –
-                including cast, production crew and personal biographies, plot summaries, trivia, ratings, and comment
-                reviews.
+            <img src="./../assets/logo.png" alt="logo" height="400px" width="400px">
+            <p>Popwatch is an online database of information related to Batman films and streaming content online – including cast, production crew and personal biographies, plot summaries, trivia, ratings, and comment reviews.
                 <br>
+                <br> The site was created by the Fronted 13.2 team in June 2020. Project based site, it is dedicated to show our knowledge in the fronted department by developing pages, design, functionality and teamspirit.
                 <br>
-                The site was created by the Fronted 13.2 team in June 2020.
-                Project based site, it is dedicated to show our knowledge in the fronted department by developing pages,
-                design, functionality and teamspirit.
-                <br>
-                <br>
-                The Fronted 13.2 team is made from: Mihaela, Andrei O., Raluca, Loredana, Andrei N., Markus, Nichita.
-                PopWatch will end on 13th of July 2020 and will remain on the good site of the internet.
+                <br> The Fronted 13.2 team is made from: Mihaela, Andrei O., Raluca, Loredana, Andrei N., Markus, Nichita. PopWatch will end on 13th of July 2020 and will remain on the good site of the internet.
             </p>
         </div>
     </div>
@@ -71,7 +64,7 @@
         </section>
     </footer>
     </div>
-    <script src="/views/Auth.js"></script>
+    <script src="./../views/Auth.js"></script>
 </body>
 
 </html>
