--- a/pages/details.html
+++ b/pages/details.html
@@ -15,7 +15,7 @@
 
         <div class="topnav">
             <div class="header-left">
-                <a href="home.html"><img src="/assets/logo.png" class="logo"></a>
+                <a href="home.html"><img src="./../assets/logo.png" class="logo"></a>
                 <div class="header-right">
                     <a href="about-us.html">ABOUT</a>
                     <a class="help" href="help.html">HELP</a>
@@ -32,7 +32,7 @@
             </div>
         </div>
 
-        <object id="banda-svg" data="/assets/banda.svg" type="image/svg+xml"></object>
+        <object id="banda-svg" data="./../assets/banda.svg" type="image/svg+xml"></object>
 
         <div id="singleMovieDetails">
         </div>
@@ -40,18 +40,11 @@
         <footer class="footer">
         </footer>
 
-<<<<<<< Updated upstream
-        <script src="/models//FetchApi.js"></script>
-        <script src="/views//Movie.js"></script>
-        <script src="/views//details.js"></script>
-        <script src="/models//Auth.js"></script>
-=======
-        <script src="/models/FetchApi.js"></script>
-        <script src="/views/Movie.js"></script>
-        <script src="/views/details.js"></script>
-        <script src="/views/Auth.js"></script>
->>>>>>> Stashed changes
-        
+        <script src="./../models/FetchApi.js"></script>
+        <script src="./../views/Movie.js"></script>
+        <script src="./../views/details.js"></script>
+        <script src="./../models/Auth.js"></script>
+
 </body>
 
 </html>
